# MiniVLMDocEval

./: .gitignore  README.md  requirements.txt  research_plan.md  setup.sh  task.md
docs/: claude_deep_research.md  gemini_deep_research.md  gpt_deep_research.md  tablevqa_deep_research_prompt.md
minivlmdoceval/: __init__.py  config.py  custom_models.py
notebooks/: colab.ipynb
scripts/: build_table_sft.py  efficiency_ablation.py  export_examples.py  make_examples_figure.py  make_report_figures.py  push_dataset_hf.py  push_model_hf.py  push_results.sh  regression_gate.py  reproduce.sh  run_eval.py  smoke_test.py  sync_results.sh  tablevqa_subdomain_report.py  train_lora_qwen.py
technical_report/: examples_gallery.tex  references.bib  report.tex
tools/decord-stub/: pyproject.toml
tools/decord-stub/decord/: __init__.py
